@@ -1,3 +1,14 @@
+2025-08-27
+
+- Speed up console output
+- Hidden console window no longer reduces performance
+- For performance reasons, console output window
+  can now be disabled during console output generation
+  and enabled again later to view cumulative output
+- Checkbutton "Logging of server requests" has moved to main menu
+  now concerning Mapsforge tile server requests
+  as well as external tile server (TMS) requests
+ 
 2025-08-22
 
 - Modified console again
